# gemmkit

./: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  docs.yml  fuzz.yml
docs/: index.html
docs/en/: book.toml
docs/en/src/: Introduction.md  SUMMARY.md
docs/en/src/architecture/: Blocking_and_the_Cache_Model.md  Design_Goals_and_the_Big_Picture.md  Dot_Kernels_and_the_Deep-K_Twin.md  Epilogue_Fusion.md  Extension_Points.md  Life_of_a_GEMM_Call.md  Packing_and_Workspaces.md  Parallel_Execution.md  SIMD_Tokens_and_ISA_Dispatch.md  Scalars_and_Kernel_Families.md  Special_Paths.md  Testing_and_Verification.md  The_Complex_Split_Kernel.md  The_Layer_Stack.md
docs/en/src/gemmkit-faer/: Using_gemmkit_with_faer.md  faer_Adapter_Advanced_Usage.md
docs/en/src/gemmkit-guide/: Batched_GEMM.md  Element_Types.md  Fused_Epilogues.md  Getting_Started.md  Matrix_Views_and_Layouts.md  Parallelism_in_Practice.md  Prepacked_Operands.md  Runtime_ISA_Dispatch.md  Small_Shapes_and_GEMV.md  The_Unchecked_Tier.md  Tuning_Knobs.md  no_std_and_WebAssembly.md
docs/en/src/gemmkit-nalgebra/: Using_gemmkit_with_nalgebra.md  nalgebra_Adapter_Advanced_Usage.md
docs/en/src/gemmkit-ndarray/: Using_gemmkit_with_ndarray.md  ndarray_Adapter_Advanced_Usage.md
docs/en/src/gemmkit-tune/: Inside_the_Sweep.md  Tuning_with_gemmkit-tune.md
docs/zh-Hans/: book.toml
docs/zh-Hans/src/: SUMMARY.md  简介.md
docs/zh-Hans/src/architecture/: Epilogue融合.md  SIMD令牌与ISA分发.md  一次GEMM调用的生命周期.md  分块与缓存模型.md  分层结构.md  复数拆分内核.md  并行执行.md  打包与工作区.md  扩展点.md  标量与内核家族.md  测试与验证.md  点积内核与深K孪生.md  特殊路径.md  设计目标与总体图景.md
docs/zh-Hans/src/gemmkit-faer/: faer适配器进阶用法.md  在faer中使用gemmkit.md
docs/zh-Hans/src/gemmkit-guide/: Unchecked层.md  no_std与WebAssembly.md  元素类型.md  小形状与GEMV.md  并行实践.md  快速上手.md  批量GEMM.md  矩阵视图与内存布局.md  融合Epilogue.md  调优旋钮.md  运行时ISA分发.md  预打包操作数.md
docs/zh-Hans/src/gemmkit-nalgebra/: nalgebra适配器进阶用法.md  在nalgebra中使用gemmkit.md
docs/zh-Hans/src/gemmkit-ndarray/: ndarray适配器进阶用法.md  在ndarray中使用gemmkit.md
docs/zh-Hans/src/gemmkit-tune/: 使用gemmkit-tune调优.md  深入扫描过程.md
gemmkit/: Cargo.toml  README.md  README.zh-CN.md
gemmkit-faer/: Cargo.toml  README.md  README.zh-CN.md
gemmkit-faer/src/: batched.rs  common.rs  cplx.rs  float.rs  fused.rs  int8.rs  lib.rs  map.rs  packed.rs
gemmkit-faer/tests/: adapter.rs  adapter_with.rs  batched.rs  perf_batched.rs
gemmkit-nalgebra/: Cargo.toml  README.md  README.zh-CN.md
gemmkit-nalgebra/src/: batched.rs  common.rs  cplx.rs  float.rs  fused.rs  int8.rs  lib.rs  map.rs  packed.rs
gemmkit-nalgebra/tests/: adapter.rs  adapter_with.rs  batched.rs  perf_batched.rs
gemmkit-ndarray/: Cargo.toml  README.md  README.zh-CN.md
gemmkit-ndarray/src/: batched.rs  common.rs  cplx.rs  float.rs  fused.rs  int8.rs  lib.rs  map.rs  packed.rs
gemmkit-ndarray/tests/: adapter.rs  adapter_with.rs  batched.rs  perf_batched.rs
gemmkit-tune/: Cargo.toml  README.md  README.zh-CN.md
gemmkit-tune/src/: main.rs
gemmkit/benches/: gemm_bench.rs
gemmkit/fuzz/: Cargo.toml  README.md  README.zh-CN.md
gemmkit/fuzz/fuzz_targets/: fuzz_api_validation.rs  fuzz_batched.rs  fuzz_gemm.rs  fuzz_knobs.rs  fuzz_prepack.rs  fuzz_prepack_i8.rs
gemmkit/fuzz/src/: api_validation.rs  common.rs  differential.rs  lib.rs  plans.rs  reference.rs
gemmkit/src/: adapter.rs  api.rs  cache.rs  dispatch.rs  driver.rs  kernel.rs  lib.rs  pack.rs  parallel.rs  scalar.rs  simd.rs  special.rs  tuning.rs  workspace.rs
gemmkit/src/api/: batched.rs  cplx.rs  fused.rs  int8.rs  map.rs  packed.rs
gemmkit/src/cache/: cpuid.rs  mod.rs  sysctl.rs  sysfs.rs
gemmkit/src/dispatch/: complex.rs  float.rs  int.rs  isa.rs  mixed.rs
gemmkit/src/kernel/: complex.rs  epilogue.rs  float.rs  int.rs  mixed.rs  mod.rs
gemmkit/src/simd/: avx512.rs  complex.rs  fma.rs  mod.rs  neon.rs  scalar.rs  wasm.rs
gemmkit/src/special/: batched.rs  gemv.rs  mod.rs  small_k.rs  small_mn.rs
gemmkit/tests/: api_surface.rs  batched.rs  correctness.rs  deep_k_narrow.rs  env.rs  env_isa_avx512.rs  env_isa_avx512_i8pack.rs  env_isa_avx512f.rs  env_isa_bf16.rs  env_isa_deep_k_avx512.rs  env_isa_deep_k_avx512bf16.rs  env_isa_garbage.rs  env_isa_i8_packed_avx512.rs  env_isa_i8_packed_scalar.rs  env_isa_i8_packed_vnni.rs  env_isa_i8_small_mn_vnni.rs  env_isa_neon.rs  env_isa_scalar.rs  env_isa_vnni.rs  env_isa_wasm.rs  epilogue.rs  open_closed.rs  perf.rs  props_api.rs  props_knobs.rs  props_packed.rs  simd_conformance.rs  tuning.rs  workspace_alloc.rs
gemmkit/tests/correctness/: api.rs  common.rs  complex.rs  float.rs  int8.rs  isa.rs  main.rs  mixed.rs  packed.rs
gemmkit/tests/env_isa_common/: mod.rs
gemmkit/tests/epilogue/: batched.rs  common.rs  cplx.rs  float.rs  main.rs  map.rs  mixed.rs  packed.rs  requant.rs  special.rs
gemmkit/tests/fast_test_common/: mod.rs
gemmkit/tests/i8_packed_common/: mod.rs
gemmkit/tests/isa_dtypes/: mod.rs
gemmkit/tests/oracle_common/: mod.rs
gemmkit/tests/perf/: bandwidth.rs  batched.rs  dtypes.rs  harness.rs  main.rs  prepack.rs  sgemm.rs  simd128.rs  small_mn.rs
gemmkit/tests/props_common/: mod.rs
scripts/: coverage.sh  merge_lcov.py
