[workspace]
resolver = "3"
members = ["gemmkit", "gemmkit-faer", "gemmkit-nalgebra", "gemmkit-ndarray", "gemmkit-tune"]
# The cargo-fuzz crate is nightly-only and must never enter the stable workspace
exclude = ["gemmkit/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SomeB1oody/gemmkit"
authors = ["SomeB1oody"]
keywords = ["gemm", "matrix", "blas", "linear-algebra", "simd"]
categories = ["mathematics", "science"]

# generic microkernel inlines fully into the per-ISA target-feature
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
