[package]
name = "gemmkit-faer"
description = "faer adapter for the gemmkit GEMM engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["parallel"]
parallel = ["gemmkit/parallel"]
wasm_threads = ["parallel", "gemmkit/wasm_threads"]
half = ["gemmkit/half"]
complex = ["gemmkit/complex"]
int8 = ["gemmkit/int8"]
epilogue = ["gemmkit/epilogue"]

[dependencies]
gemmkit = { path = "../gemmkit", version = "0.1.0", default-features = false, features = ["std"] }
# faer 0.24 (resolves 0.24.4) has rust-version = 1.84.0 (< the workspace MSRV 1.89)
faer = { version = "0.24", default-features = false }
