[package]
name = "gemmkit-ndarray"
description = "ndarray adapter for the gemmkit GEMM engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = ["parallel"]
parallel = ["gemmkit/parallel"]
wasm_threads = ["parallel", "gemmkit/wasm_threads"]
half = ["gemmkit/half"]
complex = ["gemmkit/complex"]
int8 = ["gemmkit/int8"]
epilogue = ["gemmkit/epilogue"]

[dependencies]
gemmkit = { path = "../gemmkit", version = "0.1.0", default-features = false, features = ["std"] }
# Floor at 0.17.1
ndarray = "0.17.1"

[dev-dependencies]
ndarray = { version = "0.17.1", features = ["approx"] }
approx = "0.5"
