# An empty `[workspace]` table makes this crate its own workspace root. Required
# because `gemmkit/fuzz` sits *inside* the `gemmkit` member directory, so the root
# `exclude` alone does not stop cargo from resolving the outer workspace; this pins
# the fuzz crate to its own Cargo.lock / target so nightly never leaks into stable.
[workspace]

[package]
name = "gemmkit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"
# gemmkit default features (std, parallel) ON + every element-type family, so all
# entry families (float, half, int8, complex, batched/prepack) are fuzzable.
gemmkit = { path = "..", features = ["complex", "half", "int8"] }

[lib]
name = "gemmkit_fuzz"
path = "src/lib.rs"

# One [[bin]] per target; test/doc/bench off so a `cargo test` inside the fuzz
# crate never tries to run them.
[[bin]]
name = "fuzz_gemm"
path = "fuzz_targets/fuzz_gemm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_knobs"
path = "fuzz_targets/fuzz_knobs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_api_validation"
path = "fuzz_targets/fuzz_api_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_batched"
path = "fuzz_targets/fuzz_batched.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_prepack"
path = "fuzz_targets/fuzz_prepack.rs"
test = false
doc = false
bench = false

# cargo-fuzz builds the release profile; keep line-table symbols for readable
# crash traces, and pin panic=unwind so fuzz_api_validation's catch_unwind (which
# filters documented `gemmkit:` validation panics) works regardless of the
# ambient default. The workspace's lto/codegen-units tuning is deliberately NOT
# copied here — it only slows fuzz rebuilds.
[profile.release]
debug = 1
panic = "unwind"
