[workspace]

[package]
name = "gemmkit-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"
gemmkit = { path = "..", features = ["complex", "half", "int8"] }

[lib]
name = "gemmkit_fuzz"
path = "src/lib.rs"

[[bin]]
name = "fuzz_gemm"
path = "fuzz_targets/fuzz_gemm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_knobs"
path = "fuzz_targets/fuzz_knobs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_api_validation"
path = "fuzz_targets/fuzz_api_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_batched"
path = "fuzz_targets/fuzz_batched.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_prepack"
path = "fuzz_targets/fuzz_prepack.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_prepack_i8"
path = "fuzz_targets/fuzz_prepack_i8.rs"
test = false
doc = false
bench = false

# cargo-fuzz builds the release profile; keep line-table symbols for readable
# crash traces, and pin panic=unwind so fuzz_api_validation's catch_unwind (which
# filters documented `gemmkit:` validation panics) works regardless of the
# ambient default. The workspace's lto/codegen-units tuning is deliberately NOT
# copied here — it only slows fuzz rebuilds.
[profile.release]
debug = 1
panic = "unwind"
